--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -27,3 +27,12 @@ jobs:
         
       - name: WebSite - Launch
         run: cd ./WebSite/bin/Release/net5.0 && dotnet WebSite.dll &
+        
+      - name: Tests - restore dependencies
+        run: dotnet restore DepositeCalcTests/DepositeCalcTests.sln
+
+      - name: Tests - Build
+        run: dotnet build DepositeCalcTests/DepositeCalcTests.sln --configuration Release --no-restore
+        
+      - name: Tests - Run
+        run: dotnet test DepositeCalcTests/DepositeCalcTests.sln --configuration Release --no-restore --verbosity Minimal
